--- a/faces_mtl_age_gender.ipynb
+++ b/faces_mtl_age_gender.ipynb
@@ -38,6 +38,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`PlotProgress` subclasses the Callback class to plot graph after each epoch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -78,6 +85,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper functions to extract data from the matlab metadata file and read image from path"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -106,6 +120,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read and Prepare Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -121,6 +142,13 @@
    "outputs": [],
    "source": [
     "flattened_metadata = np.squeeze(np.array([row for data in raw_metadata for rows in data for row in rows]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Take only a sample for example"
    ]
   },
   {
@@ -193,12 +221,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filter images with 3 channels (RGB)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "metainfo_df = metainfo_df[metainfo_df.data.apply(lambda x: len(np.shape(x))) == 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resize images to 100 x 100"
    ]
   },
   {
@@ -226,6 +268,13 @@
    "source": [
     "%%time\n",
     "metainfo_df['data'] = metainfo_df.data.apply(lambda img: resize(img, (100, 100), anti_aliasing= True) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check for missing values"
    ]
   },
   {
@@ -260,6 +309,13 @@
    "source": [
     "faces   = np.array([img for img in metainfo_df.data])\n",
     "labels  = metainfo_df[['age', 'gender']].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split data into train and test"
    ]
   },
   {
@@ -301,6 +357,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keras Functional API\n",
+    "- This is the main branch\n",
+    "- These layers are common to both the tasks\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -326,6 +391,14 @@
     "main_branch = Dense(32)(main_branch)\n",
     "main_branch = Activation('relu')(main_branch)\n",
     "main_branch = Dropout(dr)(main_branch)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This is where the network branches for multiple outputs/tasks\n",
+    "- gender is n x 2 output where as age is n x 1 output"
    ]
   },
   {
@@ -423,6 +496,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multi loss optimizations\n",
+    "\n",
+    "- mse for age and cross-entropy for gender\n",
+    "- we can weight these individual losses\n",
+    "- Loss = weight1 * loss1 + weight2 * loss2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -499,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
